--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,7 +168,7 @@
   }
 
 
-  .star{
+  .star {
     background: #090c13;
     height: 37px;
     margin-top: 15px;
@@ -177,15 +177,16 @@
     border-radius: 7px;
 
   }
+
   .image-background img {
-    min-width: 90%!important;
-    min-height: 70%!important;
+    min-width: 90% !important;
+    min-height: 70% !important;
     border-radius: 30px;
   }
- 
+
 
   .sideby {
-    
+
     background: #2d3952;
     padding: 32px;
     border-radius: 20px;
@@ -193,52 +194,66 @@
     bottom: 25px;
   }
 
-  .top-margin-details{
+  .top-margin-details {
     margin-top: 35rem;
   }
-  
+
   @media (min-width: 1024px) {
     .sideby {
-    margin-left: 80px;
-}
-.none_display{
-  display:none!important;
-}
+      margin-left: 80px;
+    }
 
-.top-margin{
-  margin-bottom: 89px;
-}
+    .none_display {
+      display: none !important;
+    }
+
+    .top-margin {
+      margin-bottom: 89px;
+    }
 
 
-}
+  }
 
   @media (max-width: 768px) {
     .font-large {
-      font-size: 20px!important;
+      font-size: 20px !important;
+    }
+    .title{
+      font-size: 37px;
     }
 
-    .none_display_{
-      display:none!important;
+    .none_display_ {
+      display: none !important;
     }
-    .ham{
+
+    .top-margin-details {
+      margin-top: 30rem;
+    }
+
+    .ham {
       position: absolute;
     }
-   
+
   }
-  
-  
-  
-
-
+  .none_display{
+    z-index: 999;
+    position: relative;
+  }
+  .optopn_ham{
+    position: relative;
+    z-index: 99;
+  }
 
   .resize svg {
     color: #cb8a3d;
     width: 21px;
     margin-left: 6px;
   }
- .yellow{
-  color: #cb8a3d;
- }
+
+  .yellow {
+    color: #cb8a3d;
+  }
+
   .maxwidth {
     max-width: 500px;
   }
@@ -259,7 +274,15 @@
   a[aria-selected="true"] {
     background: #6c6aef;
     border-radius: 7px;
+    margin: 5px;
+    height: 44px;
   }
+
+  a[aria-selected="false"] {
+    margin: 5px;
+    height: 44px;
+  }
+
 
   .top {
     margin-top: 27px;
@@ -289,34 +312,46 @@
     margin-left: 7px;
   }
 
-  .text-white-p p{
+  .text-white-p p {
     font-weight: 400;
     font-size: 18px;
-    color: #ffffffc7;
+    color: #a8aebf;
   }
 
+  .arrow {
+    display: inline-flex;
+    width: 20px;
+    position: relative;
+    top: 6px;
+  }
 
-  .text-white-p a{
+  .text-white-p a {
     margin: 15px;
   }
-  .card-collection-wrapper{
+
+  .card-collection-wrapper {
     background: #293445;
     padding: 11px;
     border-radius: 17px;
   }
-  .card-collection-wrapper .star{
+
+  .card-collection-wrapper .star {
     position: absolute;
     top: 0px;
     left: 9px;
   }
- .text-left{
- text-align: left;
- }
 
- .bg-app-dark-blue_{
-  background:#171e31;
- }
+  .text-left {
+    text-align: left;
+  }
 
+  .bg-app-dark-blue_ {
+    background: #171e31;
+  }
+
+  .background-blue{
+    background:#141b2c;
+  }
   @keyframes ball2 {
     0% {
       box-shadow: 30px 0 0 #97bf0d;
