--- a/styles/globals.css
+++ b/styles/globals.css
@@ -185,10 +185,10 @@
 
   .sideby {
     background: #2e3b55;
-    padding: 32px;
+    padding: 21px;
     border-radius: 20px;
     position: relative;
-    bottom: 45px;
+    bottom: 50px;
   }
 
 
@@ -257,7 +257,7 @@
   }
 
   .font-large {
-    font-size: xx-large;
+    font-size: x-large;
   }
 
   .font-medium {
